--- a/package.json
+++ b/package.json
@@ -1,39 +1,37 @@
 {
-  "name": "example-angular",
+  "name": "my-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "watch": "ng build --watch --configuration development"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.5",
-    "@angular/common": "~12.0.5",
-    "@angular/compiler": "~12.0.5",
-    "@angular/core": "~12.0.5",
-    "@angular/forms": "~12.0.5",
-    "@angular/platform-browser": "~12.0.5",
-    "@angular/platform-browser-dynamic": "~12.0.5",
-    "@angular/router": "~12.0.5",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.1.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "~14.0.5",
+    "@angular/common": "~14.0.5",
+    "@angular/compiler": "~14.0.5",
+    "@angular/core": "~14.0.5",
+    "@angular/forms": "~14.0.5",
+    "@angular/material": "^14.0.4",
+    "@angular/platform-browser": "~14.0.5",
+    "@angular/platform-browser-dynamic": "~14.0.5",
+    "@angular/router": "~14.0.5",
+    "onnxruntime-web": "^1.12.0-dev.20220708-c6732c079",
+    "rxjs": "~7.5.6",
+    "three": "^0.142.0",
+    "tslib": "^2.4.0",
+    "type-is": "^1.6.18",
+    "zone.js": "~0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.5",
-    "@angular/cli": "~12.0.5",
-    "@angular/compiler-cli": "~12.0.5",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.7.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "typescript": "~4.2.3"
+    "@angular-devkit/build-angular": "^14.2.6",
+    "@angular/cli": "~14.0.5",
+    "@angular/compiler-cli": "~14.0.5",
+    "@types/jquery": "^3.5.14",
+    "@types/node": "^18.0.3",
+    "@types/three": "^0.141.0",
+    "typescript": "~4.7.4"
   }
 }
